fix button alignment

--- a/client-react/src/home/Home.less
+++ b/client-react/src/home/Home.less
@@ -17,28 +17,20 @@
     width: 100%;
     height: 100%;
 
-    // .buttons {
-    //   display: flex;
-    //   justify-content: center;
-    //   padding: 20px;
+    .buttons-container {
+      margin-left: auto;
+      margin-right: auto;
+      width: 50%;
 
-    //   button {
-    //     &:focus {
-    //       outline: none;
-    //     }
-    //     &.join-button {
-    //       background-color: #ff4081;
-    //     }
-    //     &.how-to-button {
-    //       background-color: white;
-    //       color: black;
-    //     }
-    //     &:first-child {
-    //       margin-right: 50px;
-    //     }
+      .buttons {
+        display: flex;
+        justify-content: center;
+        padding: 20px;
 
-    //     text-transform: none;
-    //   }
-    // }
+        button {
+          margin-right: 50px;
+        }
+      }
+    }
   }
 }
